Version 13.0.4
Add GMailRegistrationService, LimitMessage, and enhance Mail

Introduced GMailRegistrationService and LimitMessage classes for better email handling and IoT configuration. Updated Mail, ValueLimit, and related classes with enhanced documentation and functionality. Introduced HTTP2 utility usage and made OAuth more flexible.